syntax = "proto2";

option go_package = "api_gateway/grpc";


service ManageVisit {
  rpc AddNewVisit(InputVisit) returns (Return) {}
  rpc GetAllVisits(User) returns (Visits) {}
  rpc InviteUserToVisit(Invite) returns (Return) {}
  rpc AcceptOrRefuseInvite(InviteResponse) returns (Return) {}
}

enum Difficulty {
  T = 0;
  E = 1;
  EE = 2;
  EEA = 3;
}

message Invite {
  required string ID_Visit = 1;
  required string Username = 2;
}

message InviteResponse {
  required string ID_Visit = 1;
  required string Username = 2;
  required string Response = 3;
}

message Visits {
  repeated Visit Visit = 1;
}

message Visit {
  required uint32 ID_Visit = 1;
  required string ID_Path = 2;
  optional double Timestamp = 3;
}

message InputVisit {
  required string Username = 1;
  required string Pathname = 2;
  required string Timestamp = 3;
}

message Return {
  required int32 Ret = 1;
}

message User {
  required string ID = 1;
}
